--- a/plants.html
+++ b/plants.html
@@ -31,5 +31,23 @@
      </div>
    <p>The row which have plant Names got break first because of they are word</p>
 
+
+   <div class="container">
+     <img src="ABELIA.jpg" class="img-fluid" alt="ABELIA" width="400" height="400">
+    <img src="VACCINIUM.jpeg" class="img-fluid" alt="VACCINIUM"width="400" height="400">
+    <img src="UMBRELLA.jpg" class="img-fluid" alt="UMBRELLA" width="400" height="400">
+ </div>
+
+<div class="container">
+
+<a target="_blank" href="ABELIA.jpg"> <img src="ABELIA.jpg"  class="img-thumbnail" alt="img-thumbnail" style="width:150px"> </a>
+<a target="_blank" href="VACCINIUM.jpeg"> <img src="VACCINIUM.jpeg"class="img-thumbnail" alt="VACCINIUM" style="width:150px"></a>
+<a target="_blank" href="UMBRELLA.jpg"> <img src="UMBRELLA.jpg" class="img-thumbnail" alt="UMBRELLA" style="width:150px"> </a>
+ 
+ 
+</div>
+
+
+
     </body>
 </html>
