--- a/plants.html
+++ b/plants.html
@@ -46,7 +46,53 @@
  
  
 </div>
-
+<table class="table table-striped table-bordered table-hover table-condensed">
+    <caption>PLANT DETAILS</caption>
+    <thead class="thead-dark">
+      <th scope="col">Letter</th>
+      <th scope="col">Plant</th>
+      <th scope="col">City</th>
+      <th scope="col">Food</th>
+      </thead>
+      <tbody>
+        <tr class="table-primary">
+          <td data-label="Letter">A</td>
+          <td data-label="Plant">ABELIA</td>
+          <td data-label="City">Dallas</td>
+          <td data-label="Food">Shrimp</td>
+      </tr>
+      <tr class="table-success">
+        <td data-label="Letter">V</td>
+        <td data-label="Plant">VACCINIUM</td>
+        <td data-label="City">Kansas</td>
+        <td data-label="Food">Fish</td>
+    </tr>
+    <tr class="table-warning">
+      <td data-label="Letter">U</td>
+      <td data-label="Plant">UMBRELLA PINE</td>
+      <td data-label="City">Houston</td>
+      <td data-label="Food">Chicken</td>
+    </tr>
+    <tr class="table-danger">
+      <td data-label="Letter">L</td>
+      <td data-label="Plant">LANTANA</td>
+      <td data-label="City">Atlanta</td>
+      <td data-label="Food">DrumbSticks</td>
+    </tr>
+    <tr class="table-info">
+      <td data-label="Letter">A</td>
+      <td data-label="Plant">ACALYPHA</td>
+      <td data-label="City">Delhi</td>
+      <td data-label="Food">Sambar</td>
+    </tr>
+    <tr class="table-light">
+      <td data-label="Letter">T</td>
+      <td data-label="Plant">TECOMA</td>
+      <td data-label="City">Banglore</td>
+      <td data-label="Food">Rasam</td>
+    </tr>
+    </tbody>  
+     </table>
 
 
     </body>
