--- a/plants.html
+++ b/plants.html
@@ -94,6 +94,23 @@
     </tbody>  
      </table>
 
+     <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+        <div class="btn-group" role="group" aria-label="First group">
+          <button type="button" class="btn btn-success">A</button>
+          <button type="button" class="btn btn-success">V</button>
+          <button type="button" class="btn btn-success">U</button>
+        </div>
+        <div class="btn-group" role="group" aria-label="Second group">
+         <button type="button" class="btn btn-warning">L</button>
+          <button type="button" class="btn btn-warning">A</button>
+        </div>
+        <div class="btn-group" role="group" aria-label="Third group">
+          <button type="button" class="btn btn-danger">T</button>
+        </div>
+        </div>
+      </div>
+
+
 
     </body>
 </html>
