--- a/plants.html
+++ b/plants.html
@@ -110,6 +110,17 @@
         </div>
       </div>
 
+      <div class="dropdown">
+        <button id="btnGroupDrop1" type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Dropdown
+        </button>
+        <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+          <a class="dropdown-item" href="cat.html">CAT</a>
+          <a class="dropdown-item" href="dog.html">DOG</a>
+        </div>
+      </div>
+
+
 
 
     </body>
