--- a/plants.html
+++ b/plants.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <nav class="navbar navbar-expand-md navbar-light and bg-light">
+        <a class="navbar-brand">
+          <a href="plants.html">Happy Plants</a>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active"><a class="nav-link" href="cat.html">Cat</a></li>
+            <li class="nav-item"> <a class="nav-link" href="dog.html">Dog</a></li>
+      </nav>
+
+
   <title>Fifth Assignment</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
